--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,12 +9,14 @@ body {
 }
 
 .container {
-    background-color: bisque;
+    background-color:none;
+    display:flexbox;
+    flex-direction:row
     
 }
 
 input {
-    width: 75%
+    width: 150rem
 }
 
 #city-list {
@@ -25,12 +27,13 @@ input {
     display: flex;
     flex-direction: row;
     justify-content: center space-around space-between;
+    background-color: pink;
 }
 
 
 .row {
-    background-color: pink;
-    width: 150px;
+    background-color: none;
+    width:auto;
 }
 
 h5 {
@@ -40,14 +43,25 @@ h5 {
 #forcast-cards {
     display:flex;
     flex-direction: row;
-    background-color: yellowgreen ;
+    background-color: pink;
 }
-.col-md1 {
-    background: none;
+.col-md-12 {
+    background: blue;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100rem;
+
 }
-.card-body {
-    background-color: none;
+.searchcard-body {
+    background-color: yellow;
+    width: 20rem;
 }
+
+
+
+
+
 
 .form-inline {
     background-color: none;
@@ -71,6 +85,7 @@ h5 {
 
 .card {
     background: none;
+
 }
 
 
