--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,15 +22,16 @@ body {
     width: 20rem;
     margin-bottom: 10px;
     margin-left: 45px;
+    padding: 5px;
     display: flexbox;
     border: borderbox;
     align-items: center;
 }
 
 .form-inline {
-    width: 15rem;
+    width: 30rem;
     background-color: transparent;
-    margin-left: 30px;
+    margin-left: 7px;
 }
 
 .btn-outline {
@@ -158,19 +159,31 @@ h1 {
     
 }  
    
+/*.stored-data {
+    background-color: blueviolet;
+    width: 180px;
+    margin-left: 45px;
 
+}*/
   
 
-.form-control {
+.city-info {
     background-color: none;
 }
 
-.btn-outline {
+.button {
     background: none;
 }
 
 .list-group {
-    background: none;
+    display: flex;
+    box-sizing: border-box;
+    background: rgb(102, 2, 99);
+    height: 100px;
+    width: 180px;
+    margin-left: 45px;
+    font:white
+
 }
 
 .col-md2 {
@@ -191,9 +204,13 @@ h1 {
      @media (min-width: 900px) {
         .container {
             display: flex;
+            margin-top: 100px;
             align-items: stretch;
             justify-content: space-between space-around;
             background-color: bisque;
         }}
      
-
+.footer {
+height:60px;
+background-color:green;
+}
