--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,17 +172,18 @@ h1 {
 }
 
 .button {
-    background: none;
+    background: greenyellow;
 }
 
 .list-group {
     display: flex;
     box-sizing: border-box;
-    background: rgb(102, 2, 99);
+    border: 1px solid black;
+    background:white;
     height: 100px;
     width: 180px;
     margin-left: 45px;
-    font:white
+    font:black
 
 }
 
@@ -209,6 +210,12 @@ h1 {
             justify-content: space-between space-around;
             background-color: bisque;
         }}
+
+
+.paragraph-style {
+  margin: 0px
+    
+}
      
 .footer {
 height:60px;
