--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
 
 .searchcard-body {
     background-color: yellow;
-    width: 20rem;
+    width: 23rem;
     margin-bottom: 10px;
     margin-left: 45px;
     padding: 5px;
@@ -46,7 +46,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color:green;
+    background-color:cornsilk;
     box-sizing: border-box;
     padding: 1px 5px 0px 0px;
   
@@ -152,6 +152,10 @@ h1 {
     background: greenyellow;
 }
 
+#addBtn {
+    background: red
+}
+
 #list-container {
     display: flex;
     box-sizing: border-box;
@@ -182,6 +186,7 @@ background-color: bisque;
 .paragraph-style {
 margin: 0px;
 cursor:grab;
+font: bold;
      
 }
      
